NXT-2495: Code quality improvements for NodeSearch and related
NXT-2495 (Object orientation and code style in NodeSearch and related)